--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,18 +12,23 @@ body,
   height: 100%;
 }
 
+
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+ font-family: 'Montserrat', sans-serif;
 }
 
 nav {
-  background-color: #5793fd;
-  color: #ffffff;
-  height: 80px;
-  padding: 10px;
-  line-height: 3;
-  font-size: 1.2rem;
+  color: beige;
+  background-color: hotpink;
+  height: 50px;
+  padding: 15px;
+  line-height: 1;
+  font-size: 2rem;
+ 
+  
 }
+
+
 
 a,
 a:hover,
@@ -42,10 +47,15 @@ header {
   padding-top: 80px;
   text-align: center;
   font-size: 1.5rem;
+  
 }
 
 header h1 {
   transform: skewX(-2deg);
+ font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  color: hotpink;
+  
 }
 
 select {
@@ -100,10 +110,19 @@ input {
 }
 
 .wrapper {
-  background-color: #f2f8ff;
+  background-color: beige;
   padding-bottom: 100px;
 }
-
+#this {
+ font-family: 'Montserrat', sans-serif;
+  color: #0f7173;
+}
+#stats {
+  background-color: beige;
+}
+#statswhite {
+  background-color: white;
+}
 .card.m-auto,
 .m-auto {
   margin: 0 auto;
@@ -365,11 +384,15 @@ form > button {
 .prev-workout h3 {
   font-size: 2rem;
   width: 100%;
+ font-family: 'Montserrat', sans-serif;
 }
 
 .prev-workout p {
   margin-top: 5px;
   margin-bottom: 5px;
+  font-size: 1.5rem;
+  background-color: #06AED5;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* .workout .card {
@@ -402,9 +425,22 @@ form > button {
   margin-top: 30px;
 }
 
+#h2E {
+ font-family: 'Montserrat', sans-serif;
+  text-align: center;
+}
+
 .buttons .ui.button {
   margin: 0;
   width: 50%;
+}
+#btnComplete{
+ font-family: 'Montserrat', sans-serif;
+  background-color: skyblue;
+}
+#btnAdd{
+ font-family: 'Montserrat', sans-serif;
+  background-color: #b578fa;
 }
 
 .ui.card h2 {
@@ -428,6 +464,16 @@ form > button {
 .resistance-form {
   padding: 10px;
 }
+#continue-btn {
+ font-family: 'Montserrat', sans-serif;
+  background-color: skyblue;
+}
+
+#new-btn {
+ font-family: 'Montserrat', sans-serif;
+  background-color: #b578fa;
+}
+
 
 @keyframes toast {
   50% {
