--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,7 +391,7 @@ form > button {
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 1.5rem;
-  background-color: #06AED5`;
+  background-color: #06AED5;
   font-family: 'Montserrat', sans-serif;
 }
 
