--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,8 @@ body,
   height: 100%;
 }
 
-
 body {
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 nav {
@@ -24,11 +23,7 @@ nav {
   padding: 15px;
   line-height: 1;
   font-size: 2rem;
- 
-  
 }
-
-
 
 a,
 a:hover,
@@ -38,7 +33,7 @@ a:visited {
   color: inherit;
 }
 
-nav a:hover{
+nav a:hover {
   opacity: 0.7;
 }
 
@@ -47,15 +42,13 @@ header {
   padding-top: 80px;
   text-align: center;
   font-size: 1.5rem;
-  
 }
 
 header h1 {
   transform: skewX(-2deg);
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 50px;
   color: hotpink;
-  
 }
 
 select {
@@ -114,7 +107,7 @@ input {
   padding-bottom: 100px;
 }
 #this {
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #0f7173;
 }
 #stats {
@@ -384,15 +377,15 @@ form > button {
 .prev-workout h3 {
   font-size: 2rem;
   width: 100%;
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .prev-workout p {
   margin-top: 5px;
   margin-bottom: 5px;
   font-size: 1.5rem;
-  background-color: #06AED5;
-  font-family: 'Montserrat', sans-serif;
+  background-color: #06aed5;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* .workout .card {
@@ -426,7 +419,7 @@ form > button {
 }
 
 #h2E {
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
 }
 
@@ -434,12 +427,12 @@ form > button {
   margin: 0;
   width: 50%;
 }
-#btnComplete{
- font-family: 'Montserrat', sans-serif;
+#btnComplete {
+  font-family: "Montserrat", sans-serif;
   background-color: skyblue;
 }
-#btnAdd{
- font-family: 'Montserrat', sans-serif;
+#btnAdd {
+  font-family: "Montserrat", sans-serif;
   background-color: #b578fa;
 }
 
@@ -465,15 +458,14 @@ form > button {
   padding: 10px;
 }
 #continue-btn {
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: skyblue;
 }
 
 #new-btn {
- font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #b578fa;
 }
-
 
 @keyframes toast {
   50% {
